# dux

./: .gitignore  README.md  pyproject.toml  requirements.txt  sir.py
examples/: benchmark.py  sir.py  sir_network.py
src/dux/: bernoulli.py
