[project]
name = "dux"
version = "0.0.1"
authors = [
  { name="Giovanni", email="giovanni.charles@gmail.com" },
]
description = "Experimenting with dABMs"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
	'jax==0.4.13',
	'jaxlib==0.4.13',
	'jaxtyping==0.2.20'
]

[project.urls]
"Homepage" = "https://github.com/giovannic/dux"
"Bug Tracker" = "https://github.com/giovannic/dux/issues"
